apps/hello/base/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  labels:
    app.kubernetes.io/name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hello.joris.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-svc
            port: 
              number: 80
